--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,35 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  margin: 33px;
+  font-size: 13px;
+  line-height: 18px;
+}
+
+h1 {
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+}
+
+h2 {
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+}
+
+p, ul, td {
+  margin: 33px;
+}
+
+th {
+  font-weight: bold;
+  padding-bottom: 5px
+}
+
+td {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 7px
+}
+
