--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -2,3 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.error {
+  color: red;
+}
+
+#notice {
+  color: green;
+}
+
+.fieid, .actions {
+  margin-bottom: 10px;
+}
