--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<%= flash[:notice] %>
+<p id="notice"><%= flash[:notice] %></p>
 <h1>Books</h1>
 <table>
   <tr>
@@ -20,20 +20,24 @@
 <h1>New Book</h1>
 <!--エラーメッセージ-->
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました<br>
-  <% @book.errors.full_messages.each do |message| %>
-    <%= message %>
-  <% end %>
+  <div class="error">
+    <p><strong>error</strong></p>
+    <ul><% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %></ul>
+  </div>
 <% end %>
 <!--投稿フォーム-->
 <%= form_with model:@book, local:true do |f| %>
-  <div>
+  <div class="fieid">
     <label for="form_title">Title</label><br>
     <%= f.text_field :title, id: "form_title" %>
   </div>
-  <div>
+  <div class="fieid">
     <label for="form_body">Body</label><br>
     <%= f.text_area :body, id: "form_body" %>
   </div>
-  <%= f.submit "Create Book" %>
+  <div class="actions">
+    <%= f.submit "Create Book" %>
+  </div>
 <% end %>
